Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: project.com
  name: project.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project.com
  strategy: {}
  template:
    metadata:
      labels:
        app: project.com
    spec:
      containers:
        - name: project-com
          image: localhost:5000/project.com
          resources: {}
