Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: project.com
  name: project-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: project.com
  type: ClusterIP
