Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: project.com
spec:
  rules:
  - host: project.com
    http:
      paths:
      - backend:
          service:
            name: project-svc
            port:
              number: 80
        path: /
        pathType: Prefix
